css/main.css
/* ... */
.main-title-container {
    margin-top: 18px;
    margin-bottom: 18px;
}

.ee-logo-container {
    display: inline-block;
}

@media screen and (max-width: 570px) {

    .main article h1 {
        padding: 0;
        margin: 0;

        display:     block;

        font-size: 34px;
        line-height: 1;
        font-family: "Courier New";
        text-align: center;
    }

    .main-title-container {
        margin-top:    18px;
        margin-bottom: 10px;
    }

    .ee-logo-container {
        display:    block;
        text-align: center;
        margin-top: 20px;
    }
}

.main article h1 a {
    color: black;
    text-decoration:none;
}

.main article h1 a:hover,.main article h1 a:visited {
    text-decoration: underline;
}

.main article h2 {
    font-size: 22px;
    font-family: "courier new";
}

.main article h3 {
    font-size: 66px;
    line-height: 50px;
    font-family: "courier new";
    margin: 20px 20px 40px 20px;

}
 /*home page labels*/
.main article h4 {
    font-size: 32px;
    line-height: 40px;
    margin: 0px;
    font-family: "courier new";


}
 /*home page project titles*/
.main article h5 {
    font-size: 24px;
    font-family: "courier new";
    margin: 0px 0px 0px 0px;

}

.main aside {
    color: white;
    padding: 0px 5% 10px;
}

.footer-container footer {
    color: white;
    padding: 20px 0;
}

/* ===============
    ALL: IE Fixes
   =============== */

.ie7 .title {
    padding-top: 20px;
}

/* ==========================================================================
   Author's custom styles zzz
   ========================================================================== */

.punchleft {
    border: 3px solid black;
    float: left;
    margin: 3px 10px 3px -150px;
}

.punchright {
    border: 3px solid black;
    float: right;
    margin: 3px -60px 3px 10px;
    position: relative;
    z-index: 2;
}

.project-title{
    margin: 0px 0px 0px -5%;
    padding: 5px;
    position:relative;
}

.plain-item  p {
    font-size: 18px;
    line-height: 1.1;
    margin: 10px 0 4px 0;
}

.pixelpeter-item {
    width: 75%; /* see article width above */
    position: relative;
    display: block;
    margin: 0 auto;
}

.the-downlow {
    float: left;
    width: 50%;
}

.pixelpeter-container {
    float: left;
    width: 50%;
}

.pixelpeter-png {
    position: absolute;
    right: -10px;
    top: -20px;
}

@media screen and (max-width: 570px) {

    .plain-item  p {
        font-size: 16px;
        line-height: 1.1;
        margin: 10px 0 4px 0;
    }

    .pixelpeter-item {
        width: 100%;
        position: relative;
        height: auto;
        display: block;
    }

    .the-downlow {
        float:none;
        display: block;
        width: 100%;
    }

    .pixelpeter-container {
        float:none;
        display: block;
        width: 100%;
        margin-top: 16px;
    }


    .pixelpeter-png {
        position: inherit;
        width: 100%;
    }
}

.center-please {
    padding-top: 14px;
    text-align : center;
}

.image-ee-science-gif {
    width: 50%;
    display: inline-block;
    padding-right: 5px;
}

.image-ee-promo {
    width: 42%;
    display: inline-block;
}

.image-ee-napping {
    width: 41%;
    display: inline-block;
    padding-right: 5px;
}

.image-ee-marmar {
    width: 50.5%;
    display: inline-block;
}

.responsive-image {
    width: 100%;
    height: auto;
}

#fadeout {
    transition: opacity 1s;
}

#fadeout:hover {
    opacity: 0;
}

.project-img {
    padding: 0px 10px;
    float: left;
}

.project-item {
  padding: 10px 10px;

    margin        :  10px 0;

    background-color: #EFEFEF;
    border: 2px solid #DDDDDD;
}

.person-item {
    position:relative;
    padding: 10px 10px 10px 16px;
    margin :  10px 0;

    background-color: #EFEFEF;
    border: 2px solid #DDDDDD;
}

.word-bubble-item {
    display   : block;
    width     : 100%;
    text-align: center;
}

.word-bubble-container-leftside {
    display: inline-block;
    text-align: right;
    vertical-align: bottom;
    width: 48%;
}

.word-bubble-container-rightside {
    display: inline-block;
    text-align: left;
    vertical-align: bottom;
    width: 48%;
}

.hannah-wordbubble {
    padding-right: 8px;
}

.matt-wordbubble {
    padding-left: 8px;
}

/* responsive pixelpeople images, once we hit mobile */
@media screen and (max-width: 570px) {
    .wordbubble-image {
        width: 100%;
        height: auto;
    }
}

.the-press-says {
    padding-left:  16px;
    padding-right: 16px;
}

.person-name-font {
    font-family: 'Courier New', 'Courier', 'Arial';
}

.
.person-item-cast {
    padding: 10px 10px;
    margin:  10px 0;
    background-color: #ffb649;
    border: 2px solid #DDDDDD;
    position:relative;
}

.person-item-crew {
    padding: 10px 10px;
    margin:  10px 0;
    background-color: #dfe1ff   ;
    border: 2px solid #cdd1ff;
    position:relative;
}

.person-left-side {
    float:left;
    width: 60%;
}

.person-left-side p {
    padding-right: 10px;
    padding-left: 10px;
    margin-top: 0px;
    margin-bottom: 0px;
}

.pixel-portrait img {
    position:absolute;
    left: -55px;
    bottom: 15%;
}
.pixel-portrait-wide img {
   position:absolute;
    left: -110px;
    bottom: 15%;

}

@media screen and (max-width: 570px) {
    .person-item {
        padding: 10px 10px 10px 65px;
    }

    .pixel-portrait img {
        left:-10px;
    }
}

.person-right-side {
    float:left;
    width: 40%;
}

.person-right-side img {
    width: 100%;
    height: auto;
}

@media screen and (max-width: 570px) {
    .person-right-side {
        display:block;
        float:none;
        width: 100%;
    }
    .person-right-side img {
        padding-top: 10px;
    }

    .person-left-side {
        display:block;
        float:none;
        width: 100%;
    }
    .person-left-side img {
        padding-top: 10px;
    }
}

.twitter-pixel-logo{
    position: absolute;
    top: 15px;
    right: -25px;
    z-index:1;
}
/* ... */

